--- a/Double breasted/index.html
+++ b/Double breasted/index.html
@@ -27,76 +27,76 @@
 
 <script>// Array of images per card
 const cardImages = [
- { name: "Rivolli Pinestriped suit (Black)", image: "images/IMG_7644.jpeg" },   
- { name: "Rivolli Pinestriped suit (White)", image: "images/IMG_7655.jpeg" },   
- { name: "Rivolli Pinestriped suit (Light Blue)", image: "images/IMG_7656.jpeg" },   
- { name: "Rivolli Pinestriped suit (Navy Blue)", image: "images/IMG_7678.jpeg" },   
- { name: "Rivolli Pinestriped suit (Beige)", image: "images/IMG_7679.jpeg" },   
- { name: "Plain Double (Green)", image: "images/IMG_7701.jpeg" },   
- { name: "Plain Double (Light Blue)", image: "images/IMG_7702.jpeg" },   
- { name: "Plain Double (Navy Blue)", image: "images/IMG_7703.jpeg" },   
- { name: "Centurion Double (Green)", image: "images/IMG_7715.jpeg" },   
- { name: "Centurion Double (Navy Blue)", image: "images/IMG_7712.jpeg" },   
- { name: "Centurion Double (Beige)", image: "images/IMG_7713.jpeg" },   
- { name: "Centurion Double (Brown)", image: "images/IMG_7714.jpeg" },   
- { name: "Strapped Double (Pink)", image: "images/IMG_7704.jpeg" },   
- { name: "Strapped Double (Navy Blue)", image: "images/IMG_7705.jpeg" },   
- { name: "Strapped Double (Black)", image: "images/IMG_7706.jpeg" },   
- { name: "Classic Double (Brown)", image: "images/IMG_7730.jpeg" },   
- { name: "Classic Double (Beige)", image: "images/IMG_7728.jpeg" },   
- { name: "Classic Double (Green)", image: "images/IMG_7729.jpeg" },   
- { name: "Daro Double (Navy Blue)", image: "images/IMG_7708.jpeg" },   
- { name: "Daro Double (Beige)", image: "images/IMG_7711.jpeg" },   
- { name: "Daro Double (Black)", image: "images/IMG_7707.jpeg" },   
- { name: "Daro Double (Royal Blue)", image: "images/IMG_7709.jpeg" },   
- { name: "Marco Lorenzo (Beige)", image: "images/IMG_7718.jpeg" },   
- { name: "Marco Lorenzo (Black)", image: "images/IMG_7716.jpeg" },   
- { name: "Marco Lorenzo (Navy Blue)", image: "images/IMG_7719.jpeg" },   
- { name: "Marco Lorenzo (Brown)", image: "images/IMG_7720.jpeg" },   
- { name: "Marco Lorenzo (Light Blue)", image: "images/IMG_7721.jpeg" },
- { name: "Marco Lorenzo (Light Blue)", image: "images/IMG_7722.jpeg" },
- { name: "Marco Lorenzo (Light Blue)", image: "images/IMG_7723.jpeg" },  
- { name: "Vega Suit (Orange)", image: "images/IMG_7725.jpeg" },   
- { name: "Vega Suit (Royal Blue)", image: "images/IMG_7724.jpeg" },   
- { name: "Vega Suit (Black)", image: "images/IMG_7726.jpeg" },   
- { name: "Marco Lorenzo Tux (White)", image: "images/IMG_7727.jpeg" },
- { name: "Marco Lorenzo Tux (White)", image: "images/IMG_7710.jpeg" },   
- { name: "Arare Suit (Army Green)", image: "images/IMG_7751.jpeg" },   
- { name: "Arare Suit (Lemon Green)", image: "images/IMG_7746.jpeg" }, 
- { name: "Marco Lorenzo (Light Blue)", image: "images/IMG_7745.jpeg" },  
- { name: "Arare Suit (Brown)", image: "images/IMG_7747.jpeg" },   
- { name: "Arare Suit (Light Brown)", image: "images/IMG_7748.jpeg" },   
- { name: "Arare Suit (Grey)", image: "images/IMG_7750.jpeg" },   
- { name: "Arare Suit (Navy Blue)", image: "images/IMG_7752.jpeg" },   
- { name: "Arare Suit (Black)", image: "images/IMG_7753.jpeg" },   
- { name: "Pinstripe suit (Green)", image: "images/IMG_7755.jpeg" },   
- { name: "Pinstripe suit (Light Grey)", image: "images/IMG_7756.jpeg" },   
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_7757.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8166.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8167.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8168.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8169.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8170.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8177.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8178.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8180.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8181.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8182.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8075.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8076.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8077.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8078.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8079.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8080.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8081.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8082.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8083.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8085.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8086.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8119.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8121.jpeg" },
- { name: "Marco Lorenzo (Light Blue)", image: "images/IMG_8122.jpeg" },
- { name: "Pinstripe suit (Dark Grey)", image: "images/IMG_8123.jpeg" },
+ { name: "Rivolli Pinestriped suit ", image: "images/IMG_7644.jpeg" },   
+ { name: "Rivolli Pinestriped suit", image: "images/IMG_7655.jpeg" },   
+ { name: "Rivolli Pinestriped suit ", image: "images/IMG_7656.jpeg" },   
+ { name: "Rivolli Pinestriped suit", image: "images/IMG_7678.jpeg" },   
+ { name: "Rivolli Pinestriped suit ", image: "images/IMG_7679.jpeg" },   
+ { name: "Plain Double", image: "images/IMG_7701.jpeg" },   
+ { name: "Plain Double", image: "images/IMG_7702.jpeg" },   
+ { name: "Plain Double", image: "images/IMG_7703.jpeg" },   
+ { name: "Centurion Double", image: "images/IMG_7715.jpeg" },   
+ { name: "Centurion Double", image: "images/IMG_7712.jpeg" },   
+ { name: "Centurion Double", image: "images/IMG_7713.jpeg" },   
+ { name: "Centurion Double", image: "images/IMG_7714.jpeg" },   
+ { name: "Strapped Double", image: "images/IMG_7704.jpeg" },   
+ { name: "Strapped Double", image: "images/IMG_7705.jpeg" },   
+ { name: "Strapped Double", image: "images/IMG_7706.jpeg" },   
+ { name: "Classic Double", image: "images/IMG_7730.jpeg" },   
+ { name: "Classic Double", image: "images/IMG_7728.jpeg" },   
+ { name: "Classic Double", image: "images/IMG_7729.jpeg" },   
+ { name: "Daro Double", image: "images/IMG_7708.jpeg" },   
+ { name: "Daro Double", image: "images/IMG_7711.jpeg" },   
+ { name: "Daro Double", image: "images/IMG_7707.jpeg" },   
+ { name: "Daro Double", image: "images/IMG_7709.jpeg" },   
+ { name: "Marco Lorenzo", image: "images/IMG_7718.jpeg" },   
+ { name: "Marco Lorenzo", image: "images/IMG_7716.jpeg" },   
+ { name: "Marco Lorenzo", image: "images/IMG_7719.jpeg" },   
+ { name: "Marco Lorenzo", image: "images/IMG_7720.jpeg" },   
+ { name: "Marco Lorenzo", image: "images/IMG_7721.jpeg" },
+ { name: "Marco Lorenzo", image: "images/IMG_7722.jpeg" },
+ { name: "Marco Lorenzo", image: "images/IMG_7723.jpeg" },  
+ { name: "Vega Suit", image: "images/IMG_7725.jpeg" },   
+ { name: "Vega Suit", image: "images/IMG_7724.jpeg" },   
+ { name: "Vega Suit", image: "images/IMG_7726.jpeg" },   
+ { name: "Marco Lorenzo", image: "images/IMG_7727.jpeg" },
+ { name: "Marco Lorenzo", image: "images/IMG_7710.jpeg" },   
+ { name: "Arare Suit", image: "images/IMG_7751.jpeg" },   
+ { name: "Arare Suit", image: "images/IMG_7746.jpeg" }, 
+ { name: "Marco Lorenzo", image: "images/IMG_7745.jpeg" },  
+ { name: "Arare Suit", image: "images/IMG_7747.jpeg" },   
+ { name: "Arare Suit", image: "images/IMG_7748.jpeg" },   
+ { name: "Arare Suit", image: "images/IMG_7750.jpeg" },   
+ { name: "Arare Suit", image: "images/IMG_7752.jpeg" },   
+ { name: "Arare Suit", image: "images/IMG_7753.jpeg" },   
+ { name: "Pinstripe suit", image: "images/IMG_7755.jpeg" },   
+ { name: "Pinstripe suit", image: "images/IMG_7756.jpeg" },   
+ { name: "Pinstripe suit ", image: "images/IMG_7757.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8166.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8167.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8168.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8169.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8170.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8177.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8178.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8180.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8181.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8182.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8075.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8076.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8077.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8078.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8079.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8080.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8081.jpeg" },
+ { name: "Pinstripe suit", image: "images/IMG_8082.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8083.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8085.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8086.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8119.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8121.jpeg" },
+ { name: "Marco Lorenzo ", image: "images/IMG_8122.jpeg" },
+ { name: "Pinstripe suit ", image: "images/IMG_8123.jpeg" },
  
 
     // Add more arrays for new cards
