--- a/Three piece/index.html
+++ b/Three piece/index.html
@@ -32,64 +32,64 @@
 const cardImages = [
   { name: "Slimfit suit", image: "images/IMG_7815.jpeg" },
   { name: "Slimfit suit", image: "images/IMG_7817.jpeg" },
-  { name: "Bilbao Suit (Brown)", image: "images/IMG_7849.jpeg" },
-  { name: "Bilbao Suit (Grey)", image: "images/IMG_7850.jpeg" },
-  { name: "Bilbao Suit (Beige)", image: "images/IMG_7851.jpeg" },
-  { name: "Bilbao Suit (Black)", image: "images/IMG_7852.jpeg" },
-  { name: "Bilbao Suit (Blue)", image: "images/IMG_7853.jpeg" },
-  { name: "Bilbao Suit (Navy Blue)", image: "images/IMG_7854.jpeg" },
-  { name: "Windowpane Suit (Navy Blue)", image: "images/IMG_7868.jpeg" },
-  { name: "Windowpane Suit (Burgundy)", image: "images/IMG_7869.jpeg" },
-  { name: "Windowpane Suit (Tan)", image: "images/IMG_7870.jpeg" },
-  { name: "Windowpane Suit (Light Grey)", image: "images/IMG_7871.jpeg" },
-  { name: "Windowpane Suit (Charcoal Grey)", image: "images/IMG_7872.jpeg" },
-  { name: "Windowpane Suit (Royal Blue)", image: "images/IMG_7873.jpeg" },
-  { name: "Windowpane Suit (Green)", image: "images/IMG_7874.jpeg" },
-  { name: "Windowpane Suit (Steel Blue)", image: "images/IMG_7875.jpeg" },
-  { name: "Stripped Suit (Midnight Blue)", image: "images/IMG_7876.jpeg" },
-  { name: "Stripped Suit (Black)", image: "images/IMG_7877.jpeg" },
-  { name: "Stripped Suit (Grey)", image: "images/IMG_7878.jpeg" },
-  { name: "Stripped Suit (Navy blue)", image: "images/IMG_7879.jpeg" },
-  { name: "Stripped Suit (Charcoal Grey)", image: "images/IMG_7880.jpeg" },
-  { name: "Micro-plaid Suit (Black)", image: "images/IMG_7898.jpeg" },
-  { name: "Micro-plaid Suit (Beige)", image: "images/IMG_7899.jpeg" },
-  { name: "Micro-plaid Suit (Purple)", image: "images/IMG_7900.jpeg" },
-  { name: "Mlano plain Suit (Brown)", image: "images/IMG_7901.jpeg" },
-  { name: "Mlano plain Suit (Navy Blue)", image: "images/IMG_7902.jpeg" },
-  { name: "Mlano plain Suit (Black)", image: "images/IMG_7903.jpeg" },
-  { name: "Mixed Three-piece Suit (Light Green)", image: "images/IMG_7908.jpeg" },
-  { name: "Mixed Three-piece Suit (Light Blue)", image: "images/IMG_7910.jpeg" },
-  { name: "Mixed Three-piece Suit (Cream)", image: "images/IMG_7911.jpeg" },
-  { name: "Mixed Three-piece Suit (Light Grey)", image: "images/IMG_7913.jpeg" },
-  { name: "Mixed Three-piece Suit (Ice Blue)", image: "images/IMG_7914.jpeg" },
-  { name: "Mixed Three-piece Suit (Sky Blue)", image: "images/IMG_7915.jpeg" },
-  { name: "Mixed Three-piece Suit (Dark Grey)", image: "images/IMG_7916.jpeg" },
-  { name: "Mixed Three-piece Suit (Grey)", image: "images/IMG_7917.jpeg" },
-  { name: "Mixed Three-piece Suit (Green)", image: "images/IMG_7918.jpeg" },
-  { name: "Macro Lorenzo Suit (Steel Blue)", image: "images/IMG_7919.jpeg" },
-  { name: "Macro Lorenzo Suit (Black)", image: "images/IMG_7920.jpeg" },
-  { name: "Macro Lorenzo Suit (Navy Blue)", image: "images/IMG_7921.jpeg" },
-  { name: "Arare Suit (Rose Pink)", image: "images/IMG_7922.jpeg" },
-  { name: "Arare Suit (Purple)", image: "images/IMG_7923.jpeg" },
-  { name: "Arare Suit (Beige)", image: "images/IMG_7924.jpeg" },
-  { name: "Arare Suit ( Orange)", image: "images/IMG_7925.jpeg" },
-  { name: "Arare Suit (Pale Pink)", image: "images/IMG_7926.jpeg" },
-  { name: "Arare Suit (Light Green)", image: "images/IMG_7927.jpeg" },
-  { name: "Senzo Rivolli Suit (Navy Blue)", image: "images/IMG_7881.jpeg" },
-  { name: "Senzo Rivolli Suit (Black)", image: "images/IMG_7882.jpeg" },
-  { name: "Senzo Rivolli Suit (White)", image: "images/IMG_7883.jpeg" },
-  { name: "Senzo Rivolli Suit (Sky Blue)", image: "images/IMG_7884.jpeg" },
-  { name: "Senzo Rivolli Suit (Brown)", image: "images/IMG_7885.jpeg" },
-  { name: "Senzo Rivolli Suit (Cream)", image: "images/IMG_7886.jpeg" },
-  { name: "Senzo Rivolli Suit (Steel Blue)", image: "images/IMG_7887.jpeg" },
-  { name: "Senzo Rivolli Suit (Grey)", image: "images/IMG_7888.jpeg" },
-  { name: "Senzo Rivolli Suit (Green)", image: "images/IMG_7889.jpeg" },
-  { name: "Senzo Rivolli Suit (Light Brown)", image: "images/IMG_7891.jpeg" },
-  { name: "Senzo Rivolli Suit (Light Blue)", image: "images/IMG_7892.jpeg" },
-  { name: "Senzo Rivolli Suit (Biege)", image: "images/IMG_7893.jpeg" },
-  { name: "Senzo Rivolli Suit (Burgundy)", image: "images/IMG_7895.jpeg" },
-  { name: "Senzo Rivolli Suit (Light Green)", image: "images/IMG_7896.jpeg" },
-  { name: "Senzo Rivolli Suit (Pink)", image: "images/IMG_7897.jpeg" },
+  { name: "Bilbao Suit ", image: "images/IMG_7849.jpeg" },
+  { name: "Bilbao Suit ", image: "images/IMG_7850.jpeg" },
+  { name: "Bilbao Suit ", image: "images/IMG_7851.jpeg" },
+  { name: "Bilbao Suit ", image: "images/IMG_7852.jpeg" },
+  { name: "Bilbao Suit ", image: "images/IMG_7853.jpeg" },
+  { name: "Bilbao Suit ", image: "images/IMG_7854.jpeg" },
+  { name: "Windowpane Suit ", image: "images/IMG_7868.jpeg" },
+  { name: "Windowpane Suit ", image: "images/IMG_7869.jpeg" },
+  { name: "Windowpane Suit ", image: "images/IMG_7870.jpeg" },
+  { name: "Windowpane Suit ", image: "images/IMG_7871.jpeg" },
+  { name: "Windowpane Suit ", image: "images/IMG_7872.jpeg" },
+  { name: "Windowpane Suit ", image: "images/IMG_7873.jpeg" },
+  { name: "Windowpane Suit ", image: "images/IMG_7874.jpeg" },
+  { name: "Windowpane Suit ", image: "images/IMG_7875.jpeg" },
+  { name: "Stripped Suit ", image: "images/IMG_7876.jpeg" },
+  { name: "Stripped Suit ", image: "images/IMG_7877.jpeg" },
+  { name: "Stripped Suit ", image: "images/IMG_7878.jpeg" },
+  { name: "Stripped Suit ", image: "images/IMG_7879.jpeg" },
+  { name: "Stripped Suit ", image: "images/IMG_7880.jpeg" },
+  { name: "Micro-plaid Suit ", image: "images/IMG_7898.jpeg" },
+  { name: "Micro-plaid Suit ", image: "images/IMG_7899.jpeg" },
+  { name: "Micro-plaid Suit ", image: "images/IMG_7900.jpeg" },
+  { name: "Mlano plain Suit ", image: "images/IMG_7901.jpeg" },
+  { name: "Mlano plain Suit ", image: "images/IMG_7902.jpeg" },
+  { name: "Mlano plain Suit ", image: "images/IMG_7903.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7908.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7910.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7911.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7913.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7914.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7915.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7916.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7917.jpeg" },
+  { name: "Mixed Three-piece Suit ", image: "images/IMG_7918.jpeg" },
+  { name: "Macro Lorenzo Suit ", image: "images/IMG_7919.jpeg" },
+  { name: "Macro Lorenzo Suit ", image: "images/IMG_7920.jpeg" },
+  { name: "Macro Lorenzo Suit ", image: "images/IMG_7921.jpeg" },
+  { name: "Arare Suit ", image: "images/IMG_7922.jpeg" },
+  { name: "Arare Suit ", image: "images/IMG_7923.jpeg" },
+  { name: "Arare Suit", image: "images/IMG_7924.jpeg" },
+  { name: "Arare Suit ", image: "images/IMG_7925.jpeg" },
+  { name: "Arare Suit ", image: "images/IMG_7926.jpeg" },
+  { name: "Arare Suit ", image: "images/IMG_7927.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7881.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7882.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7883.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7884.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7885.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7886.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7887.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7888.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7889.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7891.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7892.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7893.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7895.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7896.jpeg" },
+  { name: "Senzo Rivolli Suit ", image: "images/IMG_7897.jpeg" },
   { name: "Ottima Suit", image: "images/IMG_7855.jpeg" },
   { name: "Ottima Suit", image: "images/IMG_7856.jpeg" },
   { name: "Ottima Suit", image: "images/IMG_7857.jpeg" },
