--- a/Tuxedo/index.html
+++ b/Tuxedo/index.html
@@ -31,41 +31,41 @@
 
 <script>// Array of images per card
 const cardImages = [
-   { name: "Marco Lorenzo Tux (White)", image: "images/IMG_7956.jpeg" }, 
-   { name: "Marco Lorenzo Tux (Black)", image: "images/IMG_7957.jpeg" },  
-   { name: "Piped Shawl Tux (White)", image: "images/IMG_7958.jpeg" },  
-   { name: "Piped Shawl Tux (Black)", image: "images/IMG_7960.jpeg" },  
-   { name: "Embellished Tux (White)", image: "images/IMG_7961.jpeg" },  
-   { name: "Embellished Tux (Black)", image: "images/IMG_7962.jpeg" },  
-   { name: "Sequined Lapel Tux (Black)", image: "images/IMG_7963.jpeg" },  
-   { name: "Starburst Tux (Blue)", image: "images/IMG_7971.jpeg" },  
-   { name: "Starburst Tux (Black)", image: "images/IMG_7972.jpeg" },  
-   { name: "Starburst Tux (White)", image: "images/IMG_7970.jpeg" },  
-   { name: "Starburst Tux (Gold)", image: "images/IMG_7973.jpeg" },  
+   { name: "Marco Lorenzo Tux ", image: "images/IMG_7956.jpeg" }, 
+   { name: "Marco Lorenzo Tux ", image: "images/IMG_7957.jpeg" },  
+   { name: "Piped Shawl Tux ", image: "images/IMG_7958.jpeg" },  
+   { name: "Piped Shawl Tux ", image: "images/IMG_7960.jpeg" },  
+   { name: "Embellished Tux ", image: "images/IMG_7961.jpeg" },  
+   { name: "Embellished Tux ", image: "images/IMG_7962.jpeg" },  
+   { name: "Sequined Lapel Tux ", image: "images/IMG_7963.jpeg" },  
+   { name: "Starburst Tux", image: "images/IMG_7971.jpeg" },  
+   { name: "Starburst Tux ", image: "images/IMG_7972.jpeg" },  
+   { name: "Starburst Tux ", image: "images/IMG_7970.jpeg" },  
+   { name: "Starburst Tux ", image: "images/IMG_7973.jpeg" },  
    { name: "Double-breasted Shawl", image: "images/IMG_7975.jpeg" },  
-   { name: "Double-breasted Peak (Black)", image: "images/IMG_7976.jpeg" },  
-   { name: "Double-Breasted Peak (White)", image: "images/IMG_8016.jpeg" },  
+   { name: "Double-breasted Peak ", image: "images/IMG_7976.jpeg" },  
+   { name: "Double-Breasted Peak ", image: "images/IMG_8016.jpeg" },  
    { name: "Sparkle Shawl Tux", image: "images/IMG_7978.jpeg" },  
-   { name: "Paisley Tux (Blue)", image: "images/IMG_7996.jpeg" },  
-   { name: "Paisley Tux (Black)", image: "images/IMG_7997.jpeg" },  
-   { name: "Paisley Tux (Red)", image: "images/IMG_7998.jpeg" },  
-   { name: "Paisley Tux (Purple)", image: "images/IMG_7999.jpeg" },  
-   { name: "Paisley Tux (Light Blue)", image: "images/IMG_8001.jpeg" },  
-   { name: "Paisley Tux (Beige)", image: "images/IMG_8002.jpeg" },  
-   { name: "Paisley Tux (White)", image: "images/IMG_8003.jpeg" },  
-   { name: "Paisley (Mario Casas) White", image: "images/IMG_7964.jpeg" },  
-   { name: "Paisley (Mario Casas) Red", image: "images/IMG_7965.jpeg" },  
-   { name: "Paisley (Mario Casas) Beige", image: "images/IMG_7966.jpeg" },  
-   { name: "Paisley (Mario Casas) Blue", image: "images/IMG_7967.jpeg" },  
-   { name: "Paisley (Mario Casas) Black", image: "images/IMG_7968.jpeg" },  
-   { name: "Paisley (Mario Casas) Green", image: "images/IMG_7969.jpeg" },  
-   { name: "Bilbao (Black)", image: "images/IMG_7986.jpeg" },  
-   { name: "Bilbao (White)", image: "images/IMG_7987.jpeg" },  
-   { name: "Plain Three-piece Tux (Black)", image: "images/IMG_8013.jpeg" },  
-   { name: "Plain Three-piece Tux (Burgundy)", image: "images/IMG_8015.jpeg" },  
-   { name: "Jacquard Tux (Black)", image: "images/IMG_8010.jpeg" },  
-   { name: "Jacquard Tux (Beige)", image: "images/IMG_8011.jpeg" },  
-   { name: "Jacquard Tux (Green)", image: "images/IMG_8012.jpeg" },  
+   { name: "Paisley Tux", image: "images/IMG_7996.jpeg" },  
+   { name: "Paisley Tux ", image: "images/IMG_7997.jpeg" },  
+   { name: "Paisley Tux ", image: "images/IMG_7998.jpeg" },  
+   { name: "Paisley Tux ", image: "images/IMG_7999.jpeg" },  
+   { name: "Paisley Tux ", image: "images/IMG_8001.jpeg" },  
+   { name: "Paisley Tux ", image: "images/IMG_8002.jpeg" },  
+   { name: "Paisley Tux ", image: "images/IMG_8003.jpeg" },  
+   { name: "Paisley (Mario Casas) ", image: "images/IMG_7964.jpeg" },  
+   { name: "Paisley (Mario Casas) ", image: "images/IMG_7965.jpeg" },  
+   { name: "Paisley (Mario Casas) ", image: "images/IMG_7966.jpeg" },  
+   { name: "Paisley (Mario Casas) ", image: "images/IMG_7967.jpeg" },  
+   { name: "Paisley (Mario Casas) ", image: "images/IMG_7968.jpeg" },  
+   { name: "Paisley (Mario Casas) ", image: "images/IMG_7969.jpeg" },  
+   { name: "Bilbao ", image: "images/IMG_7986.jpeg" },  
+   { name: "Bilbao ", image: "images/IMG_7987.jpeg" },  
+   { name: "Plain Three-piece Tux ", image: "images/IMG_8013.jpeg" },  
+   { name: "Plain Three-piece Tux ", image: "images/IMG_8015.jpeg" },  
+   { name: "Jacquard Tux ", image: "images/IMG_8010.jpeg" },  
+   { name: "Jacquard Tux ", image: "images/IMG_8011.jpeg" },  
+   { name: "Jacquard Tux ", image: "images/IMG_8012.jpeg" },  
     
 
     // Add more arrays for new cards
