--- a/Two piece/index.html
+++ b/Two piece/index.html
@@ -26,42 +26,42 @@
 
 <script>// Array of images per card
 const cardImages = [
-   { name: "Marco Lorenzo Tux (White)", image: "images/IMG_8028.jpeg" }, 
-   { name: "Marco Lorenzo Tux (Black)", image: "images/IMG_8029.jpeg" },  
-   { name: "Piped Shawl Tux (White)", image: "images/IMG_8030.jpeg" },  
-   { name: "Piped Shawl Tux (Black)", image: "images/IMG_8031.jpeg" },  
-   { name: "Embellished Tux (White)", image: "images/IMG_8032.jpeg" },  
-   { name: "Embellished Tux (Black)", image: "images/IMG_8034.jpeg" },  
-   { name: "Sequined Lapel Tux (Black)", image: "images/IMG_8035.jpeg" },  
-   { name: "Starburst Tux (Blue)", image: "images/IMG_8036.jpeg" },  
-   { name: "Starburst Tux (Black)", image: "images/IMG_8037.jpeg" },  
-   { name: "Starburst Tux (White)", image: "images/IMG_8038.jpeg" },  
-   { name: "Starburst Tux (Gold)", image: "images/IMG_8039.jpeg" },  
-   { name: "Double-breasted Shawl", image: "images/IMG_8040.jpeg" },  
-   { name: "Double-breasted Peak (Black)", image: "images/IMG_8041.jpeg" },  
-   { name: "Double-Breasted Peak (White)", image: "images/IMG_8042.jpeg" },  
-   { name: "Sparkle Shawl Tux", image: "images/IMG_8043.jpeg" },  
-   { name: "Paisley Tux (Blue)", image: "images/IMG_8044.jpeg" },  
-   { name: "Paisley Tux (Black)", image: "images/IMG_8045.jpeg" },  
-   { name: "Paisley Tux (Red)", image: "images/IMG_8046.jpeg" },  
-   { name: "Paisley Tux (Purple)", image: "images/IMG_8047.jpeg" },  
-   { name: "Paisley Tux (Light Blue)", image: "images/IMG_8065.jpeg" },  
-   { name: "Paisley Tux (Beige)", image: "images/IMG_8066.jpeg" },  
-   { name: "Paisley Tux (White)", image: "images/IMG_8067.jpeg" },  
-   { name: "Paisley (Mario Casas) White", image: "images/IMG_8068.jpeg" },  
-   { name: "Paisley (Mario Casas) Red", image: "images/IMG_8069.jpeg" },  
-   { name: "Paisley (Mario Casas) Beige", image: "images/IMG_8070.jpeg" },  
-   { name: "Paisley (Mario Casas) Blue", image: "images/IMG_8071.jpeg" },  
-   { name: "Paisley (Mario Casas) Black", image: "images/IMG_8087.jpeg" },  
-   { name: "Paisley (Mario Casas) Green", image: "images/IMG_8088.jpeg" },  
-   { name: "Bilbao (Black)", image: "images/IMG_8097.jpeg" },  
-   { name: "Bilbao (White)", image: "images/IMG_8098.jpeg" },  
-   { name: "Plain Three-piece Tux (Black)", image: "images/IMG_8099.jpeg" },  
-   { name: "Plain Three-piece Tux (Burgundy)", image: "images/IMG_8100.jpeg" },  
-   { name: "Jacquard Tux (Black)", image: "images/IMG_8101.jpeg" },  
-   { name: "Jacquard Tux (Beige)", image: "images/IMG_8124.jpeg" },  
-   { name: "Jacquard Tux (Green)", image: "images/IMG_8125.jpeg" },
-   { name: "Jacquard Tux (Green)", image: "images/IMG_8126.jpeg" },  
+   { name: "Marco Lorenzo ", image: "images/IMG_8028.jpeg" }, 
+   { name: "Marco Lorenzo ", image: "images/IMG_8029.jpeg" },  
+   { name: "Piped Shawl", image: "images/IMG_8030.jpeg" },  
+   { name: "Piped Shawl ", image: "images/IMG_8031.jpeg" },  
+   { name: "Embellished ", image: "images/IMG_8032.jpeg" },  
+   { name: "Embellished ", image: "images/IMG_8034.jpeg" },  
+   { name: "Sequined Lapel ", image: "images/IMG_8035.jpeg" },  
+   { name: "Starburst ", image: "images/IMG_8036.jpeg" },  
+   { name: "Starburst ", image: "images/IMG_8037.jpeg" },  
+   { name: "Starburst ", image: "images/IMG_8038.jpeg" },  
+   { name: "Starburst ", image: "images/IMG_8039.jpeg" },  
+   { name: "Double-breasted ", image: "images/IMG_8040.jpeg" },  
+   { name: "Double-breasted  ", image: "images/IMG_8041.jpeg" },  
+   { name: "Double-Breasted ", image: "images/IMG_8042.jpeg" },  
+   { name: "Sparkle ", image: "images/IMG_8043.jpeg" },  
+   { name: "Paisley  ", image: "images/IMG_8044.jpeg" },  
+   { name: "Paisley  ", image: "images/IMG_8045.jpeg" },  
+   { name: "Paisley  ", image: "images/IMG_8046.jpeg" },  
+   { name: "Paisley  ", image: "images/IMG_8047.jpeg" },  
+   { name: "Paisley  ", image: "images/IMG_8065.jpeg" },  
+   { name: "Paisley  ", image: "images/IMG_8066.jpeg" },  
+   { name: "Paisley  ", image: "images/IMG_8067.jpeg" },  
+   { name: "Daro ", image: "images/IMG_8068.jpeg" },  
+   { name: "Daro ", image: "images/IMG_8069.jpeg" },  
+   { name: "Daro ", image: "images/IMG_8070.jpeg" },  
+   { name: "Daro ", image: "images/IMG_8071.jpeg" },  
+   { name: "Daro ", image: "images/IMG_8087.jpeg" },  
+   { name: "Paisley (Mario Casas) ", image: "images/IMG_8088.jpeg" },  
+   { name: "Bilbao ", image: "images/IMG_8097.jpeg" },  
+   { name: "Bilbao ", image: "images/IMG_8098.jpeg" },  
+   { name: "Plain Three-piece ", image: "images/IMG_8099.jpeg" },  
+   { name: "Plain Three-piece  ", image: "images/IMG_8100.jpeg" },  
+   { name: "Jacquard ", image: "images/IMG_8101.jpeg" },  
+   { name: "Jacquard ", image: "images/IMG_8124.jpeg" },  
+   { name: "Jacquard ", image: "images/IMG_8125.jpeg" },
+   { name: "Jacquard  ", image: "images/IMG_8126.jpeg" },  
     
 
     // Add more arrays for new cards
