--- a/suit website/index.html
+++ b/suit website/index.html
@@ -25,43 +25,43 @@
     <div class="category-card"><a href="../Double breasted/index.html">
         <div class="image-frame"> <img src="IMG_7644.jpeg" alt="Double-breasted"></div>
     </a>
-    <span class="Names">Double-breasted</span>
+    <span class="Names">DOUBLE-BREASTED</span>
     </div>
 
     <div class="category-card"><a href="../Three piece/index.html">
         <div class="image-frame"> <img src="IMG_7653.jpeg" alt="Three-piece"></div>
     </a>
-    <span class="Names">Three-piece</span>
+    <span class="Names">THREE-PIECE</span>
     </div>
 
     <div class="category-card"><a href="../Tuxedo/index.html">
         <div class="image-frame"> <img src="IMG_7656.jpeg" alt="Tuxedo"></div>
     </a>
-    <span class="Names">Tuxedo</span>
+    <span class="Names">TUXEDO</span>
     </div>
 
     <div class="category-card"><a href="../Two piece/index.html">
         <div class="image-frame"> <img src="IMG_7655.jpeg" alt="Two-piece"></div>
     </a>
-    <span class="Names">Two-piece</span>
+    <span class="Names">TWO-PIECE</span>
     </div>
 
     <div class="category-card"><a href="../Shirts/index.html">
         <div class="image-frame"> <img src="IMG_7657.jpeg" alt="Corporate shirts"></div>
     </a>
-    <span class="Names">Corporate shirts</span>
+    <span class="Names">CORPORATE-SHIRTS</span>
     </div>
 
     <div class="category-card"><a href="../Ties/index.html">
         <div class="image-frame"> <img src="IMG_7677.jpeg" alt="Ties"></div>
     </a>
-    <span class="Names">Ties</span>
+    <span class="Names">TIES</span>
     </div>
 </div>
 
 <section class="landing text"><h3> We deliver anywhere in the world</h3>
 <br>
-<h2 class="store"> Visit Our Store </h2>
+<h2 class="store"> VISIT OUR STORE </h2>
 
 <p class="space"> They say beauty is in the eyes of the beholder so visit us, and let your eyes
       decide what true beauty means.
@@ -71,7 +71,7 @@
 <a href="../Store/index.html" class="read-more">Read More</a>
 <hr>
 
-<h2 class="Guidlines">Size Guidlines</h2>
+<h2 class="Guidlines">SIZE GUIDELINE</h2>
 <p class="space"> At Royal Suits we dont aim to sell, we make sure our customers get the right fit. 
     We cretaed a guidline section so customers can best pick their size.
     If you don't know it no need to panic, We are always here to help.  </p>
