--- a/Store/index.html
+++ b/Store/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2> OUR STORE</h2>
     <P class="store">They say beauty is in the eyes of the beholder so visit our store, and let your eyes
-      decide what true beauty means.</P>
+      decide what true beauty really means.</P>
 
       <div class="container">
         <img src="images/IMG_8246.jpeg"  class=icon alt="">
