--- a/Three piece/index.html
+++ b/Three piece/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Double-Brested</title>
-    <link rel="stylesheet" href="../suit website/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h2 class="breasted">THREE-PIECE</h2>
