--- a/index.html
+++ b/index.html
@@ -14,44 +14,44 @@
 <div class="menu-icon" id="menu-icon">&#9776;</div>
 <div id="menu">
     <a href="index.html">Home</a>
-    <a href="../Store/index.html">Our store</a>
-    <a href="../Size Guideline/index.html">Size Guidlines</a>
+    <a href="Store/index.html">Our store</a>
+    <a href="Size Guideline/index.html">Size Guidlines</a>
 </div>
 </header>
 
 <h2>SUIT CATEGORIES</h2>
 <div class="CATEGORIES">
-    <div class="category-card"><a href="../Double breasted/index.html">
+    <div class="category-card"><a href="Double breasted/index.html">
         <div class="image-frame"> <img src="IMG_7644.jpeg" alt="Double-breasted"></div>
     </a>
     <span class="Names">DOUBLE-BREASTED</span>
     </div>
 
-    <div class="category-card"><a href="../Three piece/index.html">
+    <div class="category-card"><a href="Three piece/index.html">
         <div class="image-frame"> <img src="IMG_7653.jpeg" alt="Three-piece"></div>
     </a>
     <span class="Names">THREE-PIECE</span>
     </div>
 
-    <div class="category-card"><a href="../Tuxedo/index.html">
+    <div class="category-card"><a href="Tuxedo/index.html">
         <div class="image-frame"> <img src="IMG_7656.jpeg" alt="Tuxedo"></div>
     </a>
     <span class="Names">TUXEDO</span>
     </div>
 
-    <div class="category-card"><a href="../Two piece/index.html">
+    <div class="category-card"><a href="Two piece/index.html">
         <div class="image-frame"> <img src="IMG_7655.jpeg" alt="Two-piece"></div>
     </a>
     <span class="Names">TWO-PIECE</span>
     </div>
 
-    <div class="category-card"><a href="../Shirts/index.html">
+    <div class="category-card"><a href="Shirts/index.html">
         <div class="image-frame"> <img src="IMG_7657.jpeg" alt="Corporate shirts"></div>
     </a>
     <span class="Names">CORPORATE-SHIRTS</span>
     </div>
 
-    <div class="category-card"><a href="../Ties/index.html">
+    <div class="category-card"><a href="Ties/index.html">
         <div class="image-frame"> <img src="IMG_7677.jpeg" alt="Ties"></div>
     </a>
     <span class="Names">TIES</span>
@@ -67,7 +67,7 @@
 
 </p>
 
-<a href="../Store/index.html" class="read-more">Read More</a>
+<a href="Store/index.html" class="read-more">Read More</a>
 <hr>
 
 <h2 class="Guidlines">SIZE GUIDELINE</h2>
@@ -75,7 +75,7 @@
     We cretaed a guidline section so customers can best pick their size.
     If you don't know it no need to panic, We are always here to help.  </p>
 
-    <a href="../Size Guideline/index.html" class="read-more">Read More</a>
+    <a href="Size Guideline/index.html" class="read-more">Read More</a>
     <hr>
     <h2>Contact us</h2>
     <div class="container">
